Adwaita: Fix wrong icon position in some buttons
This commit reverts min-width sizes and changes horizontal padding instead in
order to avoid off-centered button icons.

Fixes #1621

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -522,8 +522,8 @@ button {
   @at-root %button_basic, & {
 
     min-height: 24px;
-    min-width: 18px;
-    padding: 4px 8px;
+    min-width: 16px;
+    padding: 4px 9px;
     border: 1px solid;
     border-radius: $button_radius;
     transition: $button_transition;
@@ -587,9 +587,9 @@ button {
     }
 
     &.image-button {
-      min-width: 26px;
-      padding-left: 4px;
-      padding-right: 4px;
+      min-width: 24px;
+      padding-left: 5px;
+      padding-right: 5px;
     }
 
     &.text-button {
@@ -630,10 +630,10 @@ button {
 
   // big standalone buttons like in Documents pager
   &.osd {
-    min-width: 26px;
+    min-width: 24px;
     min-height: 32px;
 
-    &.image-button { min-width: 34px; }
+    &.image-button { min-width: 32px; }
 
     color: $osd_fg_color;
     border-radius: 5px;
